--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,13 +5,47 @@
 	<title class="pageTitle">{{ site.page_title }}</title>
 	<meta name="description" content="{{ site.app_description }}">
 	<link rel="shortcut icon" href="{{site.url}}{{site.baseurl}}/{{ site.app_icon }}">
-
+	<meta name="keywords" content="{{ site.keywords | join: ' ' }}" />
 	<!-- Smart App Banner -->
 	{% if site.enable_smart_app_banner %}
 	<meta name="apple-itunes-app" content="app-id={{ site.ios_app_id }}">
 	{% endif %}
 
+	<!-- Social Media -->
+	<meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="{{ site.page_title }}">
+    <meta property="og:description" content="{{ site.app_description }}">
+    <meta property="og:url" content="{{ site.url }}{{site.baseurl}}/">
+    <meta property="og:image" content="{{site.url}}{{site.baseurl}}/{{ site.featured_image }}" />
+    <meta property="og:site_name" content="{{ site.page_title }}">
+    <meta property="fb:admins" content="https://facebook.com/saradgajurel" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="{{ site.page_title }}">
+    <meta name="twitter:description" content="{{ site.app_description }}">
+    <meta name="twitter:site" content="@SaradGajurel" />
+    <meta name="twitter:creator" content="@SaradGajurel">
+    <meta name="twitter:image" content="{{site.url}}{{site.baseurl}}/{{ site.featured_image }}" />
+
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
 		integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	<link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/main.css">
+
+	<!-- Google Auto Ads -->
+    <script data-ad-client="ca-pub-6295960587787276" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+    <!-- Google Analytics -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-84674621-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
